--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <title>0-Shogun-0</title>
  </head>
  <body>
- <p>
-   Str1
-   Str2
-   Str3
- </p>
+   <h4>Str1</h4>
+   <h4>Str2</h4>
+   <h4>Str3</h4>
+   <h4>Str4</h4>
  </body>
 </html>
