git commit from PowerShell in C#

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!<!DOCTYPE html>
 <html>
  <head>
-  <title>0-Shogun-0</title>
+  <title>0 - Shogun - 0</title>
  </head>
  <body>
-   <h4>Str1</h4>
-   <h4>Str2</h4>
-   <h4>Str3</h4>
-   <h4>Str4</h4>
- </body>
-</html>
+<h4>127.0.0.1:10000</h4>
+<h4>192.168.100.120:10000</h4>
+<h4>2.tcp.ngrok.io:18053</h4>
+<h4>Not available</h4>
+  </body>
+   </html>
