--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
   <title>0 - Shogun - 0</title>
  </head>
  <body>
-<h4>127.0.0.1:10000</h4>
-<h4>192.168.100.120:10000</h4>
-<h4>2.tcp.ngrok.io:18053</h4>
-<h4>Not available</h4>
+<h4>Server off</h4>
   </body>
    </html>
