--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <title>0 - Shogun - 0</title>
  </head>
  <body>
-<h4>Server off</h4>
+<h4>127.0.0.1:10000</h4>
+<h4>192.168.100.120:10000</h4>
+<h4>6.tcp.ngrok.io:17166</h4>
+<h4>Not available</h4>
   </body>
    </html>
